<?xml version="1.0"?>
<package>
  <name>worldlib</name>
  <version>0.0.1</version>
  <description>Common libraries to communicate with the world model database.</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/worldlib</url>
  <url type="bugtracker">https://github.com/willowgarage/world_model/issues</url>
  <url type="repository">https://github.com/willowgarage/world_model</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosservice</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>python-pymongo</build_depend>
  <build_depend>mongodb-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosbridge_library</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosservice</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>python-pymongo</run_depend>
  <run_depend>mongodb-dev</run_depend>
  <run_depend>rosbridge_library</run_depend>
</package>
